--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
   },
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
-    "@ant-design/pro-components": "^2.3.49",
-    "@emotion/css": "^11.10.5",
+    "@ant-design/pro-components": "^2.3.52",
+    "animate.css": "^4.1.1",
+    "antd": "^5.1.5",
     "axios": "^1.2.0",
     "crypto-js": "^4.1.1",
     "echarts": "^5.4.0",
+    "http-proxy-middleware": "^2.0.6",
     "js-cookie": "^3.0.1",
-    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.3.0",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "remixicon": "^2.5.0"
   },
   "devDependencies": {
