--- a/.env.development
+++ b/.env.development
@@ -6,6 +6,7 @@ VITE_APP_BASE_API = '/api'
 VITE_WS_BASE_API = '/socket.io'
 
 # real api
-VITE_APP_REAL_API = 'http://47.97.208.219:8087'
+# VITE_APP_REAL_API = 'http://47.97.208.219:8087'
+VITE_APP_REAL_API = 'http://127.0.0.1:8087'
 VITE_WS_REAL_API = 'ws://47.97.208.219:10050/ws'
 
